tests/fixtures/invalid/max_str_set.py
# Cannot call max() with Str, Set[int]
x = max("hello", {1, 2, 3})
